server setup on post 3000 and mock data files added to mock folder also added express.js to project

--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "wanderlust",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.19.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
