--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "keywords": [],
   "author": "",
@@ -13,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
