--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wanderlust",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "start-server": "node server.js"
   },
   "keywords": [],
   "author": "",
